--- a/libft/Makefile
+++ b/libft/Makefile
@@ -32,7 +32,7 @@ ft_itoa.c ft_putchar.c ft_putstr.c ft_putendl.c ft_putnbr.c \
 ft_putchar_fd.c ft_putstr_fd.c ft_putendl_fd.c ft_putnbr_fd.c \
 ft_lstnew.c ft_lstdelone.c ft_lstdel.c ft_lstadd.c ft_lstiter.c \
 ft_lstmap.c get_next_line.c ft_putwchar.c ft_itoa_base.c ft_isspace.c \
-ft_strtol.c
+ft_strtol.c ft_abs.c ft_min.c ft_max.c
 SOURCES = $(addprefix $(SOURCES_DIRECTORY), $(SOURCES_LIST))
 OBJECTS_DIRECTORY = objects/
 OBJECTS_LIST = $(patsubst %.c, %.o, $(SOURCES_LIST))
